--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,6 +23,7 @@
         padding: 0 20px;
         margin: 150px auto;
         text-align: center;
+        width: 98%;
     }
 
     .desktop{display: none;}
